mailsenderror/other/4_2_prometheus_k8s_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-operator-ingress
  namespace: ecosystem
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus-operator

  ingress:
  - {}
