mailsenderror/other/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: ces
  name: postfix-dependency-mailpit
  namespace: ecosystem
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          dogu.name: postfix
  podSelector:
    matchLabels:
      app: mailpit
  policyTypes:
  - Ingress
